# py_cfar

./: .gitignore  CMakeLists.txt  README  README.md  avgRegionImage.cpp  avgRegionImage.mexa64  ca_cfar.cpp  ca_cfar.h  eval.ipynb  main.cpp  ossimCFARFilter.h  parse_json.ipynb  parse_xml.py  plot_bbox.cpp  read_xml.ipynb  run.py  runCFAR.m  run_cfar.ipynb  setup.py  simpleCFAR.cpp  utils.cpp
